# webeval

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  conftest.py  methodology.md  pyproject.toml  requirements-analysis.txt  requirements-dev.txt  requirements-scripts.txt  requirements.txt
apikeys/: _request_meta.py  admin.py  admin_urls.py  apps.py  auth.py  forms.py  mixins.py  models.py  permissions.py  scopes.py  views.py
apikeys/migrations/: 0001_initial.py
apikeys/tests/: test_audit.py  test_auth.py  test_models.py  test_views.py
core/: context_processors.py  settings.py  urls.py  views.py
experiments/: admin.py  api.py  api_urls.py  apps.py  assignment.py  charts.py  csv_exports.py  data_ops.py  exports.py  forms.py  imports.py  models.py  stats.py  urls.py  validators.py  views.py
experiments/migrations/: 0001_initial.py  0002_question_page_break_before_stimulus_image_and_more.py  0003_experiment_instructions_content_experiment_mode_and_more.py  0004_experiment_require_audio_check.py  0005_question_show_prompt.py  0007_alter_experiment_state.py  (+3 more)
scripts/: analyze_pairwise.py  batch_upload_stimuli.py
static/: site.css
survey/: admin.py  apps.py  flow.py  metadata.py  models.py  urls.py  views.py
templates/: base.html
tests/: test_admin_selenium.py  test_admin_stats.py  test_api_prompts.py  test_api_stimuli.py  test_database_export.py  test_end_to_end.py  test_pairwise_assignment.py  test_pairwise_audio_e2e.py  test_pairwise_end_to_end.py  test_partial_form_preservation.py  test_show_prompt.py  test_test_phase.py
(+39 files in other folders)
